# Rust-CLI

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md
.github/workflows/: rust-ci.yml
src/: main.rs
