[package]
name = "learning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#anyhow = "1.0.77"
cargo-binstall = "1.4.9"
cargo-watch = "8.4.1"
chrono = "0.4.31"
#serde = "1.0.193"
#serde_json = "1.0.108"
#thiserror = "1.0.52"
#tokio = "1.35.1"
#log = "0.4.20"
#env_logger = "0.10.1"
#pretty_env_logger = "0.5.0"
#tracing = "0.1.40"
rand = "0.8.4"
cargo-audit = "0.18.3"
